# fortyone

./: .env.example  Cargo.toml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
be/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
be/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
be/src/engine/: card.rs  game.rs  test.rs
be/src/handlers/: error.rs  game.rs
be/src/routes/: game.rs
be/src/state/: memory_store.rs  mod.rs  redis_store.rs  redis_types.rs  state.rs  store.rs
be/tests/: integration_test.rs
fe/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  index.html  nginx.conf
fe/public/css/: main.css
fe/src/: utils.rs
fe/src/components/: alert.rs  enemy.rs  game.rs  in_game.rs  mod.rs  player.rs  post_game.rs  pre_game.rs
fe/src/context/: game_state.rs
fe/src/errors/: game_error.rs
fe/src/models/: api_data.rs
fe/src/services/: connection.rs
src/: app.rs  main.rs
src/components/game/: game.rs
style/: main.scss
