[package]
name = "fortyone-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.1", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
base62 = "0.2"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.2.0"
tower = "0.5.2"
jsonwebtoken = "9"
tower_governor = "0.8"

[dev-dependencies]
axum-test = "20"
tokio-tungstenite = "0.24"
